# twrap

./: .gitignore  Cargo.toml  README.md  mise.toml
.github/workflows/: ci.yml  release.yml
img/: demo_htop_screenshot.tape  demo_vim.tape
src/: config.rs  highlight.rs  main.rs  model.rs  support.rs  template.rs  transform.rs  tui.rs
