[package]
name = "twrap"
version = "0.1.0"
edition = "2024"
description = "A TUI wrapper for applying rules to live terminal screens."
license = "MIT"
repository = "https://github.com/blacknon/twrap"
homepage = "https://github.com/blacknon/twrap"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
crossterm = "0.29"
portable-pty = "0.9"
regex = "1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
shell-words = "1.1"
signal-hook = "0.3"
unicode-width = "0.2"
vt100 = "0.16"
